--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,51 +1,52 @@
 .Navbar-container {
-	width: 100vw;
-	max-width: 1000px;
-	margin: 0 auto;
+  width: 100vw;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 .Navbar {
-	width: 100%;
-	max-width: 1000px;
-	height: 6vh;
-	margin: 0 auto;
-	padding: 0 16px;
-	box-sizing: border-box;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: fixed;
-	z-index: 2;
-	background-color: #fff5ee;
+  width: 100%;
+  max-width: 1000px;
+  height: 6vh;
+  margin: 0 auto;
+  padding: 0 16px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 2;
+  background-color: #fff5ee;
 }
 .Navbar a {
-	color: inherit;
-	text-decoration: none;
-	text-transform: capitalize;
+  color: inherit;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 .Logo {
-	margin-left: 4px;
-	font-size: 1.4rem;
-	font-weight: 600;
-	text-transform: capitalize;
-	color: #e03624 !important;
+  margin-left: 4px;
+  font-size: 1.75rem;
+  font-family: 'Comfortaa', cursive;
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #e03624 !important;
 }
 .Navbar-button {
-	border: none;
-	outline: none;
-	cursor: pointer;
-	border-radius: 4px;
-	background-color: #e03624;
-	color: white;
-	padding: 4px 16px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 2px;
+  background-color: #e03624;
+  color: white;
+  padding: 4px 16px;
 }
 .Navbar-link {
-	color: #1f1c0c;
+  color: #1f1c0c;
 }
 .Navbar-button,
 .Navbar-link {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-	text-transform: capitalize;
-	margin-right: 16px;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  text-transform: capitalize;
+  margin-right: 16px;
 }
