--- a/src/styles/NewPaletteModal.css
+++ b/src/styles/NewPaletteModal.css
@@ -1,21 +1,23 @@
 .Dialog-title {
-	background-color: #fff5ee;
-	padding: 20px 24px;
-	margin: 0;
-	color: #1f1c0c;
+  background-color: #fff5ee;
+  padding: 20px 24px;
+  margin: 0;
+  color: #1f1c0c;
+  font-family: 'Comfortaa', cursive;
+  /* font-weight: 700; */
 }
 .Dialog-button {
-	border: none;
-	outline: none;
-	cursor: pointer;
-	border-radius: 4px;
-	background-color: transparent;
-	padding: 4px 16px;
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: 600;
-	text-transform: capitalize;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 4px 16px;
+  font-size: inherit;
+  font-family: inherit;
+  /* font-weight: 600; */
+  text-transform: capitalize;
 }
 .create {
-	color: #e03624;
+  color: #e03624;
 }
